--- a/css/grayscale.scss
+++ b/css/grayscale.scss
@@ -110,6 +110,12 @@ a {
             text-shadow: 0 0 2px rgba(0, 0, 0, 0.8);
         }
     }
+	div{
+		height:inherit;
+	}
+		img{
+			height:inherit;
+		}
     .nav {
         text-align: center;
         li {
