--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,19 +1,19 @@
 // Variables
 
 // Main color
-$primary-color: #000;
+$primary-color: #FFF;
 
 // Anchor color
 $secondary-color: #00cdff;
 
 // Font color
-$font-color: #fff;
+$font-color: #1c1c1b;
 
 $navbar-text-shadow: true;
 $header-text-shadow: true;
 $header-background-color: $primary-color;
-$intro-text-color: $font-color;
-$navbar-color: $font-color;
+$intro-text-color: #FFF;
+$navbar-color: #FFF;
 $navbar-lg-collapse-background-color: $header-background-color;
 $navbar-lg-background: transparent;
 $navbar-sm-background-color: $navbar-lg-collapse-background-color;
