--- a/css/grayscale.scss
+++ b/css/grayscale.scss
@@ -84,7 +84,7 @@ a {
     text-transform: uppercase;
     font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
     background-color: $navbar-sm-background-color;
-    background: url(../img/intro-bg.jpg) no-repeat top center scroll;
+    background: url({{ site.background-img }}) no-repeat top right scroll;
     background-size: cover;
     /* Fix height limit and scroll for small screen and many items menu */
     max-height: 100%;
@@ -158,7 +158,7 @@ a {
         &.top-nav-collapse {
             padding: 0;
             /*background: $navbar-lg-collapse-background-color;*/
-   	    background: url(../img/intro-bg.jpg) no-repeat top center scroll;
+   	    background: url({{ site.background-img }}) no-repeat top right scroll;
 	    background-size: cover;
             border-bottom: 1px solid rgba($font-color, 0.3);
         }
@@ -173,7 +173,7 @@ a {
     text-align: center;
     color: $intro-text-color;
     {% if site.background-img %}
-    background: url({{ site.background-img }}) no-repeat bottom center scroll;
+    background: url({{ site.background-img }}) no-repeat top right scroll;
     {% endif %}
     background-color: $header-background-color;
     -webkit-background-size: cover;
