--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -14,6 +14,7 @@ $header-text-shadow: true;
 $header-background-color: $primary-color;
 $intro-text-color: #FFF;
 $navbar-color: #FFF;
+$open-menu-color: #7a869e;
 $navbar-lg-collapse-background-color: $header-background-color;
 $navbar-lg-background: transparent;
 $navbar-sm-background-color: $navbar-lg-collapse-background-color;
