--- a/css/grayscale.scss
+++ b/css/grayscale.scss
@@ -93,7 +93,7 @@ a {
     .navbar-toggle {
         padding: 4px 6px;
         font-size: 16px;
-        color: $navbar-color;
+        color: $open-menu-color;
         &:focus,
         &:active {
             outline: none;
@@ -206,6 +206,25 @@ a {
         }
     }
 }
+
+.calEve1nt{
+   font-size: 38px;
+    /* font-weight: 700; */
+    display: block;
+    /* float: left; */
+    color: #1C1C1B;
+    text-decoration: none;
+    font-weight: 700;
+    /* padding: 28px 20px 0 20px; */
+    /* height: 4px; */
+    /* width: auto; */
+    color: green;
+    color: #FFF;
+    text-shadow: 0 0 14px rgba(0,0,0,0.8);
+    padding: 5px 15px;
+}
+
+
 
 @-webkit-keyframes pulse {
     from {
