--- a/css/grayscale.scss
+++ b/css/grayscale.scss
@@ -108,7 +108,8 @@ a {
     a {
         color: $navbar-color;
         @if $header-text-shadow{
-            text-shadow: 0 0 2px rgba(0, 0, 0, 0.8);
+		    color: #ffffff;
+			text-shadow: 0 0px 6px #286090;
         }
    	padding: 5px 15px;
     }
@@ -121,6 +122,8 @@ a {
     .nav {
         text-align: center;
         li {
+			font-weight: 700;
+			font-size: 14px;
             a {
                 -webkit-transition: background .3s ease-in-out;
                 -moz-transition: background .3s ease-in-out;
